--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "fast-cache-syc",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "syc",
   "main": "src/index.js",
   "scripts": {
-    "test": "https://github.com/qq1179459323/fast-cache-syc.git"
+    "example": "http-server -p 8880",
+    "release": "webpack",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -18,5 +20,17 @@
   "bugs": {
     "url": "https://github.com/qq1179459323/fast-cache-syc/issues"
   },
-  "homepage": "https://github.com/qq1179459323/fast-cache-syc#readme"
+  "homepage": "https://github.com/qq1179459323/fast-cache-syc#readme",
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "webpack": "^4.7.0",
+    "webpack-cli": "^2.1.2"
+  },
+  "dependencies": {
+    "fast-cache-syc": "0.0.2"
+  }
 }
